# NeoFOAM_GPL

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  install_t8code.sh
applications/: CMakeLists.txt
applications/test_treeAMR/: CMakeLists.txt  test_treeAMR.cpp
benchmark/explicitOperators/explicitOperators/: run
benchmark/explicitOperators/explicitOperators/system/: simulationParameters
benchmark/gradOperator/gradOperator/: Allrun
benchmark/gradOperator/gradOperator/system/: simulationParameters
cmake/: install_helpers.cmake
include/NeoFOAM_GPL/blas/: deviceAdjacency.hpp
include/NeoFOAM_GPL/cellCentredFinitVolume/: gaussGreenGrad.hpp
include/NeoFOAM_GPL/mesh/unstructuredMesh/: unstructuredMesh.hpp
include/NeoFOAM_GPL/readers/: foamFields.hpp  foamMesh.hpp
include/NeoFOAM_GPL/treeAMR/: t8_MeshModifier.hpp
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/benchmarks/explicitOperators/: CMakeLists.txt  explicitOperators.cpp
src/benchmarks/gradOperator/: CMakeLists.txt  createFields.H  gradOperator.cpp
src/benchmarks/matrixAssembly/: CMakeLists.txt  matrixAssembly.cpp
src/treeAMR/: treeAMRMesh.cpp  treeAMRMesh.hpp
